# CPP-SMTPClient-library

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md  SMTPClient.sln  SMTPClient.vcxproj  SMTPClient.vcxproj.filters  test_detail.xml
.github/workflows/: ci.yml  cmake.yml  sync-to-azure-devops.yml
Include/: Attachment.h  AttachmentError.h  Base64.h  CommunicationError.h  HTMLMessage.h  Message.h  MessageAddress.h  PlainTextMessage.h  SMTPClient.h  StringUtils.h
Source/: Attachment.cpp  AttachmentError.cpp  Base64.cpp  CommunicationError.cpp  HTMLMessage.cpp  Message.cpp  MessageAddress.cpp  PlainTextMessage.cpp  SMTPClient.cpp  StringUtils.cpp
cmake/: smtpclientConfig.cmake.in
debian/: changelog  control  copyright  debhelper-build-stamp  libsmtpclient-dev.install  libsmtpclient.install  rules
debian/libsmtpclient-dev/usr/lib/x86_64-linux-gnu/cmake/smtpclient/: smtpclientConfig.cmake  smtpclientTargets-release.cmake
debian/libsmtpclient/usr/lib/x86_64-linux-gnu/: libsmtpclient.so.1
debian/tmp/smtpclient/: base64.h  forcedsecuresmtpclient.h  htmlmessage.h  plaintextmessage.h  serveroptionsanalyzer.h  smtpclientbase.h  smtpclienterrors.h  smtpserverstatuscodes.h  stringutils.h
debian/tmp/smtpclient/cpp/: attachment.hpp  forcedsecuresmtpclient.hpp  htmlmessage.hpp  messageaddress.hpp
debian/tmp/usr/lib/x86_64-linux-gnu/cmake/smtpclient/: smtpclientConfigVersion.cmake  smtpclientTargets.cmake
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
src/: attachment.cpp  attachment.h  attachmenterror.cpp  attachmenterror.h  base64.cpp  base64.h  communicationerror.cpp  communicationerror.h  credential.cpp  credential.h  errorresolver.cpp  errorresolver.h  forcedsecuresmtpclient.cpp  forcedsecuresmtpclient.h  htmlmessage.cpp  htmlmessage.h  implicitsslsmtpclient.cpp  implicitsslsmtpclient.h  message.cpp  message.h  messageaddress.cpp  messageaddress.h  messageidutils.cpp  messageidutils.h  opportunisticsecuresmtpclient.cpp  opportunisticsecuresmtpclient.h  plaintextmessage.cpp  plaintextmessage.h  securesmtpclientbase.cpp  securesmtpclientbase.h  serverauthoptions.h  serveroptionsanalyzer.cpp  serveroptionsanalyzer.h  smtpclient.cpp  smtpclient.h  smtpclientbase.cpp  smtpclientbase.h  smtpclienterrors.h  socketerrors.h  sslerrors.h  (+4 more)
src/cpp/: attachment.cpp  attachment.hpp  credential.cpp  credential.hpp  forcedsecuresmtpclient.cpp  forcedsecuresmtpclient.hpp  htmlmessage.cpp  htmlmessage.hpp  message.cpp  message.hpp  messageaddress.cpp  messageaddress.hpp  opportunisticsecuresmtpclient.cpp  opportunisticsecuresmtpclient.hpp  plaintextmessage.cpp  plaintextmessage.hpp  smtpclient.cpp  smtpclient.hpp
src/cpp/example/: send-mail.cpp
test/smtpclient_unittest/: Attachment_unittest.cpp  MessageAddress_unittest.cpp  PlainTextMessage_unittest.cpp  SMTPClient_Test.vcxproj  SMTPClient_Test.vcxproj.filters  StringUtils_unittest.cpp  attachment_unittest.cpp  credential_unittest.cpp  errorresolver_unittest.cpp  htmlmessage_cpp_unittest.cpp  main.cpp  message_cpp_unittest.cpp  message_unittest.cpp  messageaddress_unittest.cpp  messageidutils_unittest.cpp  opportunisticsecuresmtpclient_unittest.cpp  plaintextmessage_cpp_unittest.cpp  plaintextmessage_unittest.cpp  serveroptionsanalyzer_unittest.cpp  smtpclient_unittest.cpp  smtpclientbase_unittest.cpp  sslsmtpclient_unittest.cpp  stringutils_unittest.cpp
